RESOLVED FIXED17033
REGRESSION: Really long <option> causes unnecessary page scroll bars to accommodate content
https://bugs.webkit.org/show_bug.cgi?id=17033
Summary REGRESSION: Really long <option> causes unnecessary page scroll bars to accom...
Matt Lilek
Reported 2008-01-27 12:25:49 PST
A very long bit of content in an <option> will cause scroll bars to appear on the page as if the <select>'s width wasn't limited.
Attachments
Account for controls' clipping rect when in {rightmost, leftmost, lowest}Position() (35.37 KB, patch)
2008-02-16 22:27 PST, mitz
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2008-01-27 13:02:18 PST
This is a regression from Safari 2.0.4 (419.3) with original WebKit on Mac OS X 10.4.11 (8S165).
mitz
Comment 2 2008-01-27 13:25:05 PST
mitz
Comment 3 2008-02-16 22:27:58 PST
Created attachment 19167 [details] Account for controls' clipping rect when in {rightmost, leftmost, lowest}Position()
Darin Adler
Comment 4 2008-02-16 23:35:32 PST
Comment on attachment 19167 [details] Account for controls' clipping rect when in {rightmost, leftmost, lowest}Position() r=me
mitz
Comment 5 2008-02-17 00:51:31 PST
Note You need to log in before you can comment on or make changes to this bug.