WebCore:

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17033
          <rdar://problem/5709315> REGRESSION: Really long <option> causes unnecessary page scroll bars to accommodate content

        Test: fast/forms/control-clip-overflow.html

        * rendering/RenderFlow.cpp:
        (WebCore::RenderFlow::lowestPosition): Account for control clipping.
        (WebCore::RenderFlow::rightmostPosition): Ditto.
        (WebCore::RenderFlow::leftmostPosition): Ditto.

LayoutTests:

        Reviewed by Darin Adler.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17033
          <rdar://problem/5709315> REGRESSION: Really long <option> causes unnecessary page scroll bars to accommodate content

        * fast/forms/control-clip-overflow.html: Added.
        * platform/mac/fast/forms/control-clip-overflow-expected.checksum: Added.
        * platform/mac/fast/forms/control-clip-overflow-expected.png: Added.
        * platform/mac/fast/forms/control-clip-overflow-expected.txt: Added.



Canonical link: https://commits.webkit.org/24090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30345 268f45cc-cd09-0410-ab3c-d52691b4dbfc